<resources>
    <string name="app_name">ViedkaAdmin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtResumen">Resumen</string>
    <string name="txtVentas">Ventas</string>
    <string name="txtAgregarReporte">Agregar reporte</string>
    <string name="txtLibroContable">Libro contable</string>
    <string name="txtNombreQuienElabora">Nombre de quien elaboró</string>
    <string name="txtFecha">Fecha</string>
    <string name="ej_marialopez">Ej. María López</string>
    <string name="seleccionar">Seleccionar...</string>
    <string name="agregarProductos">Agregar Productos</string>
    <string name="eliminarProductos">Eliminar Productos</string>
    <string name="editarProductos">Editar Productos</string>
    <string name="txtProductos">PRODUCTOS</string>

    <string name="txtLoginTitulo">Iniciar sesión</string>
    <string name="txtLoginUsuario">Mirna</string>
    <string name="txtLoginContra">Contraseña</string>
    <string name="txtEditarTrabajadores">Editar trabajador</string>
    <string name="txtAgregarTrabajador">Agregar trabajador</string>
    <string name="txtTrabajadoresExistentes">Trabajadores existentes</string>
    <string name="txtTitleTrabajadores">Trabajadores</string>
</resources>