<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_resumen"
        android:enabled="true"
        android:icon="@drawable/menu_ic_tienda"
        android:title="@string/txtResumen" />
    <item
        android:id="@+id/menu_ventas"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/txtVentas" />
    <item
        android:id="@+id/menu_agregarreporte"
        android:enabled="true"
        android:icon="@drawable/menu_ic_agregarreporte"
        android:title="@string/txtAgregarReporte" />
    <item
        android:id="@+id/menu_librocontable"
        android:enabled="true"
        android:icon="@drawable/menu_ic_librocontable"
        android:title="LibroContable"
        android:lines="2"/>
    <item
        android:id="@+id/menu_productos"
        android:enabled="true"
        android:icon="@drawable/ic_t_shirt_svgrepo_com"
        android:title="Productos"/>

</menu>