<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLoginViedka"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtLoginTitulo"
        android:textColor="#3B4256"
        android:textSize="48sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtLoginUsuario"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_contra"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
        app:layout_constraintVertical_bias="0.243" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout_contra"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:textColorHint="#FF9100"
        app:boxStrokeColor="@color/amarillo_700"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="#FF9100"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"
        app:placeholderTextColor="#000000"
        app:prefixTextColor="#000000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_contra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txtLoginContra"
            android:inputType="textPassword"
            android:textColorHighlight="@color/amarillo_200"
            android:textColorHint="#FF9100"
            android:textSize="24sp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
        app:layout_constraintVertical_bias="0.023"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/userwoman" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/circledotsloop" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toTopOf="@+id/lottieAnimationView"
        app:layout_constraintVertical_bias="0.36"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/yellowlockloop" />

    <Button
        android:id="@+id/btnLogin"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="OK"
        android:textColor="#000000"
        android:textColorHighlight="@color/teal_200"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_contra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout_contra"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_contra"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="#FFF200"
        app:strokeColor="@color/amarillo_700"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>